tests/test_compile/cases/skip_invalid_arg.rs
use deku::prelude::*;

// Invalid skip argument
#[derive(DekuRead, DekuWrite)]
struct TestInvalidArg {
    #[deku(skip(invalid))]
    field: u8,
}

fn main() {}
